2nd training/Community/Community/Community1/force-app/main/default/objects/Export_Shipment_Request__c/Export_Shipment_Request__c.object-meta.xml
<CustomObject>
    <description>Export object related list (form) under Job Reference for AMHK &amp; AMSG</description>
    <label>Export Shipment Request</label>
    <nameField>
        <displayFormat>ESR{YY}{MM}{DD}-{00000}</displayFormat>
        <label>Export Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Export Shipment Requests</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>