2nd training/Community/Community/Community1/force-app/main/default/objects/Export_Shipment_Request__c/fields/Account_name__c.field-meta.xml
<CustomField>
    <fullName>Account_name__c</fullName>
    <label>Account name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>