2nd training/Community/Community/Community1/force-app/main/default/objects/Export_Shipment_Request__c/fields/Air_Freight_Unit_Cost_SGD__c.field-meta.xml
<CustomField>
    <fullName>Air_Freight_Unit_Cost_SGD__c</fullName>
    <label>Air Freight Unit Cost (SGD)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>