2nd training/Community/Community/Community1/force-app/main/default/objects/Export_Shipment_Request__c/fields/Airport_Supervision_HK__c.field-meta.xml
<CustomField>
    <fullName>Airport_Supervision_HK__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Airport Supervision</label>
    <type>Checkbox</type>
</CustomField>