2nd training/Community/Community/Community1/force-app/main/default/objects/Export_Shipment_Request__c/fields/Arrival_Deadline__c.field-meta.xml
<CustomField>
    <fullName>Arrival_Deadline__c</fullName>
    <label>Arrival Deadline</label>
    <type>Date</type>
</CustomField>