2nd training/Community/Community/Community1/force-app/main/default/objects/Export_Shipment_Request__c/fields/Attached_documents_provided_by_CS__c.field-meta.xml
<CustomField>
    <fullName>Attached_documents_provided_by_CS__c</fullName>
    <label>Attached documents provided by CS</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Proforma Invoice</fullName>
            </value>
            <value>
                <fullName>Commercial Invoice</fullName>
            </value>
            <value>
                <fullName>Packing List</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>