2nd training/Community/Community/Community1/force-app/main/default/objects/Export_Shipment_Request__c/fields/Book_freight_type__c.field-meta.xml
<CustomField>
    <fullName>Book_freight_type__c</fullName>
    <label>Book freight type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Air</fullName>
            </value>
            <value>
                <fullName>Sea</fullName>
            </value>
            <value>
                <fullName>Courier</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>