2nd training/Community/Community/Community1/force-app/main/default/objects/Export_Shipment_Request__c/fields/BUP_Supervision_for_HT_reference__c.field-meta.xml
<CustomField>
    <fullName>BUP_Supervision_for_HT_reference__c</fullName>
    <description>Singapore</description>
    <label>BUP Supervision (for HT reference)</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
                <default>true</default>
                <label>No</label>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>