2nd training/Community/Community/Community1/force-app/main/default/objects/Export_Shipment_Request__c/fields/Cargo_Description__c.field-meta.xml
<CustomField>
    <fullName>Cargo_Description__c</fullName>
    <label>Description of Goods</label>
    <type>TextArea</type>
</CustomField>