2nd training/Community/Community/Community1/force-app/main/default/objects/Export_Shipment_Request__c/fields/Cargo_located_in_which_warehouse__c.field-meta.xml
<CustomField>
    <fullName>Cargo_located_in_which_warehouse__c</fullName>
    <label>Other Address</label>
    <length>50</length>
    <type>Text</type>
</CustomField>