2nd training/Community/Community/Community1/force-app/main/default/objects/Export_Shipment_Request__c/fields/Collection_Address__c.field-meta.xml
<CustomField>
    <fullName>Collection_Address__c</fullName>
    <description>Singapore</description>
    <label>Collection Address</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Helu-Trans, 39 Keppel Road #02-04 Tanjong Pagar Distripark (S)089065</fullName>
            </value>
            <value>
                <fullName>Le Freeport, 32 Changi North Crescent (S)499643</fullName>
            </value>
            <value>
                <fullName>Self-Lodge by Helu-Trans</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>