2nd training/Community/Community/Community1/force-app/main/default/objects/Export_Shipment_Request__c/fields/Collection_Address_HK__c.field-meta.xml
<CustomField>
    <fullName>Collection_Address_HK__c</fullName>
    <description>Hong Kong</description>
    <label>Collection Address</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Unit 2, 11th Floor, Global Gateway, 168 Yeung Uk Road, Tsuen Wan, Hong Kong</fullName>
            </value>
            <value>
                <fullName>Unit 1003, 11th Floor Mapletree Logistics Centre 30 Tsing Yi Road Tsing Yi, N.T. Hong Kong</fullName>
            </value>
            <value>
                <fullName>9/F, ATL Logistics Centre B, Berth 3, Kwai Chung, N.T., Hong Kong</fullName>
            </value>
            <value>
                <fullName>Others_Indicate_below</fullName>
                <label>Others (Indicate below)</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>