2nd training/Community/Community/Community1/force-app/main/default/objects/Export_Shipment_Request__c/fields/Consignee_Details__c.field-meta.xml
<CustomField>
    <fullName>Consignee_Details__c</fullName>
    <label>Consignee Details</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>