2nd training/Community/Community/Community1/force-app/main/default/objects/Export_Shipment_Request__c/fields/Courier_on_Board__c.field-meta.xml
<CustomField>
    <fullName>Courier_on_Board__c</fullName>
    <label>Courier on Board</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
                <default>true</default>
                <label>No</label>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>