2nd training/Community/Community/Community1/force-app/main/default/objects/Export_Shipment_Request__c/fields/Crate_Dimensions__c.field-meta.xml
<CustomField>
    <fullName>Crate_Dimensions__c</fullName>
    <label>Crate Dimensions</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>