2nd training/Community/Community/Community1/force-app/main/default/objects/Export_Shipment_Request__c/fields/Documents_attached__c.field-meta.xml
<CustomField>
    <fullName>Documents_attached__c</fullName>
    <label>Documents attached</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Proforma Invoice</fullName>
            </value>
            <value>
                <fullName>Commercial Invoice</fullName>
            </value>
            <value>
                <fullName>Packing List</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>