2nd training/Community/Community/Community1/force-app/main/default/objects/Export_Shipment_Request__c/fields/Est_Chargeable_Volume_CBM__c.field-meta.xml
<CustomField>
    <fullName>Est_Chargeable_Volume_CBM__c</fullName>
    <label>Est Chargeable Volume (CBM)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>