2nd training/Community/Community/Community1/force-app/main/default/objects/Export_Shipment_Request__c/fields/Est_Crate_Dimensions_CM__c.field-meta.xml
<CustomField>
    <fullName>Est_Crate_Dimensions_CM__c</fullName>
    <label>Est Crate Dimensions (CM)</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>