2nd training/Community/Community/Community1/force-app/main/default/objects/Export_Shipment_Request__c/fields/Final_port_of_arrival_Air_Sea__c.field-meta.xml
<CustomField>
    <fullName>Final_port_of_arrival_Air_Sea__c</fullName>
    <label>Final port of arrival (Air/Sea)</label>
    <length>50</length>
    <type>Text</type>
</CustomField>