2nd training/Community/Community/Community1/force-app/main/default/objects/Export_Shipment_Request__c/fields/Freight_Type_to_Book__c.field-meta.xml
<CustomField>
    <fullName>Freight_Type_to_Book__c</fullName>
    <description>For FCL only</description>
    <label>Freight Type to Book</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Sea - FCL 20FT</fullName>
            </value>
            <value>
                <fullName>Sea - FCL 40FT</fullName>
            </value>
            <value>
                <fullName>Sea - FCL 40HC</fullName>
            </value>
            <value>
                <fullName>Others (State type under &apos;Important Field&apos;)</fullName>
            </value>
            <value>
                <fullName>Air</fullName>
                <isActive>false</isActive>
                <label>Air</label>
            </value>
            <value>
                <fullName>Sea - LCL</fullName>
                <isActive>false</isActive>
                <label>Sea - LCL</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>