2nd training/Community/Community/Community1/force-app/main/default/objects/Export_Shipment_Request__c/fields/Important_Notes__c.field-meta.xml
<CustomField>
    <fullName>Important_Notes__c</fullName>
    <label>Important Notes</label>
    <type>TextArea</type>
</CustomField>