2nd training/Community/Community/Community1/force-app/main/default/objects/Export_Shipment_Request__c/fields/No_of_Packages_Crates__c.field-meta.xml
<CustomField>
    <fullName>No_of_Packages_Crates__c</fullName>
    <label>No. of Packages/Crates</label>
    <length>9</length>
    <type>Text</type>
</CustomField>