2nd training/Community/Community/Community1/force-app/main/default/objects/Export_Shipment_Request__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Export Shipment Requests</relationshipLabel>
    <relationshipName>Export_Shipment_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>