2nd training/Community/Community/Community1/force-app/main/default/objects/Export_Shipment_Request__c/fields/Other_OFA__c.field-meta.xml
<CustomField>
    <fullName>Other_OFA__c</fullName>
    <inlineHelpText>Other Outward Forwarder Agent</inlineHelpText>
    <label>Other OFA</label>
    <length>99</length>
    <type>Text</type>
</CustomField>