2nd training/Community/Community/Community1/force-app/main/default/objects/Export_Shipment_Request__c/fields/Outward_Forwarder_Agent__c.field-meta.xml
<CustomField>
    <fullName>Outward_Forwarder_Agent__c</fullName>
    <label>Outward Forwarder Agent</label>
    <length>99</length>
    <type>Text</type>
</CustomField>