2nd training/Community/Community/Community1/force-app/main/default/objects/Export_Shipment_Request__c/fields/Permit_Type__c.field-meta.xml
<CustomField>
    <fullName>Permit_Type__c</fullName>
    <label>Permit Type</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ATA Carnet</fullName>
            </value>
            <value>
                <fullName>OD - Offset IM (Export from same FTZ)</fullName>
            </value>
            <value>
                <fullName>OD - Permanent</fullName>
            </value>
            <value>
                <fullName>OO - TCI (Temporary Export/Re-imported goods, Fresh OO)</fullName>
            </value>
            <value>
                <fullName>OO - Offset II under APS</fullName>
            </value>
            <value>
                <fullName>OO - Offset II under TCE, MUSUEM</fullName>
            </value>
            <value>
                <fullName>OO - Offset II under TCO, MUSUEM</fullName>
            </value>
            <value>
                <fullName>OO - Offset II under TCS, MUSUEM</fullName>
            </value>
            <value>
                <fullName>OO - Offset RM with Export Details</fullName>
            </value>
            <value>
                <fullName>OT - Offset IM (Export from different FTZ)</fullName>
            </value>
            <value>
                <fullName>OU - Offset II &amp; RM without Export Details</fullName>
            </value>
            <value>
                <fullName>RM - Removal (Offset II/RM)</fullName>
            </value>
            <value>
                <fullName>Export under LU (Not Applicable)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>