2nd training/Community/Community/Community1/force-app/main/default/objects/Export_Shipment_Request__c/fields/Preferred_Airline__c.field-meta.xml
<CustomField>
    <fullName>Preferred_Airline__c</fullName>
    <label>Preferred Airline</label>
    <length>30</length>
    <type>Text</type>
</CustomField>