2nd training/Community/Community/Community1/force-app/main/default/objects/Export_Shipment_Request__c/fields/Ready_date__c.field-meta.xml
<CustomField>
    <fullName>Ready_date__c</fullName>
    <label>Ready date</label>
    <type>Date</type>
</CustomField>