2nd training/Community/Community/Community1/force-app/main/default/objects/Export_Shipment_Request__c/fields/Shipper_Name_Address__c.field-meta.xml
<CustomField>
    <fullName>Shipper_Name_Address__c</fullName>
    <description>Populate from job ref &apos;Shipper Name &amp; Address&apos; field</description>
    <label>Shipper Name &amp; Address</label>
    <type>TextArea</type>
</CustomField>