2nd training/Community/Community/Community1/force-app/main/default/objects/Export_Shipment_Request__c/fields/Shipping_to_prepare_following__c.field-meta.xml
<CustomField>
    <fullName>Shipping_to_prepare_following__c</fullName>
    <label>Shipping to prepare following</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Booking Form</fullName>
            </value>
            <value>
                <fullName>Shipping Advice</fullName>
            </value>
            <value>
                <fullName>Shipping Mark</fullName>
            </value>
            <value>
                <fullName>Transit Insurance</fullName>
            </value>
            <value>
                <fullName>Export Declaration</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>