2nd training/Community/Community/Community1/force-app/main/default/objects/Export_Shipment_Request__c/fields/Special_Instructions__c.field-meta.xml
<CustomField>
    <fullName>Special_Instructions__c</fullName>
    <defaultValue>&quot;1. Door to door transit insurance is not covered by Helu-Trans (HK) Pte Ltd&quot; &amp; BR() &amp;
&quot;   &quot; &amp; BR() &amp;
&quot;2. Your charges are for our account (email dated       ).  Please quote our job reference number in your invoice to us. Charges are prepaid up till arrival xxx airport. Other charges, duty &amp; tax are for the consignee’s account.&quot; &amp; BR() &amp;
&quot;   &quot; &amp; BR() &amp;
&quot;3. Kindly confirm by return the safe arrival of shipment.&quot;</defaultValue>
    <label>Special Instructions</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>