2nd training/Community/Community/Community1/force-app/main/default/objects/Export_Shipment_Request__c/fields/Special_requirements__c.field-meta.xml
<CustomField>
    <fullName>Special_requirements__c</fullName>
    <label>Special requirements</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>ATA Carnet</fullName>
            </value>
            <value>
                <fullName>Export CITES Permit</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>