2nd training/Community/Community/Community1/force-app/main/default/objects/Export_Shipment_Request__c/recordTypes/HK_Export_Shipment_Request.recordType-meta.xml
<RecordType>
    <fullName>HK_Export_Shipment_Request</fullName>
    <active>true</active>
    <label>HK Export Shipment Request</label>
</RecordType>