2nd training/Community/Community/Community1/force-app/main/default/objects/Export_Shipment_Request__c/recordTypes/SG_Air_Export.recordType-meta.xml
<RecordType>
    <fullName>SG_Air_Export</fullName>
    <active>true</active>
    <label>SG Air Export</label>
</RecordType>