2nd training/Community/Community/Community1/force-app/main/default/objects/Export_Shipment_Request__c/recordTypes/SG_FCL_Export.recordType-meta.xml
<RecordType>
    <fullName>SG_FCL_Export</fullName>
    <active>true</active>
    <label>SG FCL Export</label>
</RecordType>