2nd training/Community/Community/Community1/force-app/main/default/objects/Export_Shipment_Request__c/recordTypes/SG_LCL_Export.recordType-meta.xml
<RecordType>
    <fullName>SG_LCL_Export</fullName>
    <active>true</active>
    <label>SG LCL Export</label>
</RecordType>